--- a/index.scss
+++ b/index.scss
@@ -42,6 +42,12 @@
   line-height: 15px;
 }
 
+// Narrow text
+.text--narrow {
+  font-size: 14px;
+  line-height: 18px;
+}
+
 // Larger text
 .text-large {
   font-size: 16px;
